--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -37,8 +37,8 @@ eureka:
 info:
   app.name: matthew-microservicecloud
   company.name: www.matthew.com
-  build.artifactId: ${project.artifactId}
-  build.version: ${project.version}
+  build.artifactId: /@project.artifactId@
+  build.version: /@project.version@
 ---
 server: 
   port: 8001
@@ -74,5 +74,5 @@ eureka:
 info:
   app.name: matthew-microservicecloud
   company.name: www.matthew.com
-  build.artifactId: ${project.artifactId}
-  build.version: ${project.version}
+  build.artifactId: /@project.artifactId@
+  build.version: /@project.version@
